<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/download6"
    android:orientation="vertical"
    tools:ignore="MissingConstraints"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/signout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:layout_marginStart="290dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="95sp"
            android:textColor="#FFFFFF"
            android:layout_marginStart="15dp"/>
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="50sp"
            android:textColor="#FFFFFF"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"/>
        <TextView
            android:id="@+id/desg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subs1"
            android:textSize="50sp"
            android:textColor="#FFFFFF"
            android:layout_marginStart="15dp"/>
        <TextView
            android:id="@+id/sal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salary111"
            android:textSize="50sp"
            android:textColor="#FFFFFF"
            android:layout_marginStart="15dp"/>
        <TextView
            android:id="@+id/Status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pending11"
            android:textSize="50sp"
            android:textColor="#FFFFFF"
            android:layout_marginStart="15dp"/>
        <TextView
            android:id="@+id/working"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/working_hours"
            android:textSize="50sp"
            android:textColor="#FFFFFF"
            android:layout_marginStart="15dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/Students22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/studentse"
                android:textSize="50sp"
                android:textColor="#FFFFFF"
                android:layout_marginStart="15dp"/>
        <TextView
            android:id="@+id/Students"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/students11"
            android:textSize="35sp"
            android:textColor="#FFFFFF"
            android:layout_marginStart="15dp"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>