<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/download3"
    android:orientation="vertical"
    tools:ignore="MissingConstraints"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/signout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:layout_marginStart="290dp"/>
    </LinearLayout>
     <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         android:layout_marginTop="25dp">
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="95sp"
            android:textColor="#FFFFFF"
            android:layout_marginStart="15dp"/>
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="40sp"
            android:textColor="#FFFFFF"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"/>

        <TextView
            android:id="@+id/subs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subs"
            android:textSize="40sp"
            android:textColor="#FFFFFF"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/valid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valid"
            android:textSize="40sp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/Status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pending"
            android:textSize="40sp"
            android:textColor="#FFFFFF"
            android:layout_marginStart="15dp"/>

            <Button
                android:id="@+id/pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_now"
                android:layout_marginLeft="20dp"/>

    </LinearLayout>

    </LinearLayout>
</LinearLayout>