<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/download1">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="461dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_margin="?actionBarSize"
            android:text="         IRON       FITNESS"
            android:textColor="#fff"
            android:textSize="40sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/username1"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/email"
            android:paddingStart="10dp"
            android:textColor="#0B0B0B"
            android:textColorHint="#eee"
            android:textSize="17sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/pass1"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textColor="#000000"
            android:textColorHint="#eee"
            android:textSize="17sp"
            tools:ignore="RtlSymmetry" />




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="120dp"
                android:text="@string/login" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/or" />

            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register" />
        </LinearLayout>


    </LinearLayout>




</RelativeLayout>