<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/download5"
    android:orientation="vertical"
    tools:ignore="MissingConstraints"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/signout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:layout_marginStart="300dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="95sp"
            android:textColor="#FFFFFF"
            android:layout_marginStart="15dp"/>
            <TextView
                android:id="@+id/name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manager"
                android:textSize="30sp"
                android:textColor="#FFFFFF"
                android:layout_marginStart="15dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/members"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/members"
                android:textSize="40sp"
                android:textColor="#FFFFFF"
                android:layout_marginStart="15dp"/>

            <ListView
                android:id="@+id/memlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/workers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workers"
                android:textSize="40dp"
                android:textColor="#FFFFFF"
                android:layout_marginLeft="15dp"/>

            <ListView
                android:id="@+id/worlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>